dear diary front

--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
   "name": "DearDiary",
-  "displayName": "DearDiary"
+  "displayName": "DearDiary",
+    "react-native-google-mobile-ads": {
+    "android_app_id": ""
+  }
 }
